<?xml version="1.0"?>
<package>
  <name>hokuyo_to_pcl</name>
  <version>0.1.0</version>
  <description>ROS driver for HOKUYO 3D sensor</description>

  <license>BSD</license>
  <author email="">Yukihiro Saito</author>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
</package>
